--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="quiz_information_notice">Quiz Instruction</string>
     <string name="question_count">Question 1</string>
     <string name="picture_image">This Mazda car was manufactured which year?</string>
+    <string name="reset">Reset</string>
 </resources>
